syntax = "proto3";
package gateway;

service Gateway {
    // apply new configuration
    rpc Apply (ApplyRequest) returns (ApplyResponse);

    // get stream of traffic data
    rpc Traffic (TrafficRequest) returns (stream TrafficResponse);

    // get stream of state changes (endpoint, connection state)
    rpc State (StateRequest) returns (stream StateResponse);
}

message ApplyRequest {
    string token = 1;
    string config = 2;
}

message ApplyResponse {
    bool success = 1;
    optional string error_kind = 2;
    optional string error_mesg = 3;
}

message TrafficRequest {
    string token = 1;
}

message TrafficResponse {
    string traffic = 1;
}

message StateRequest {
    string token = 1;
}

message StateResponse {
    string event = 1;
}
